--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "7.5.5",
     "babel-loader": "8.0.6",
     "clean-webpack-plugin": "3.0.0",
+    "core-js": "^3.2.1",
     "css-loader": "3.2.0",
     "eslint": "6.2.2",
     "eslint-loader": "3.0.0",
