--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "7.5.5",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "8.0.6",
     "clean-webpack-plugin": "3.0.0",
     "core-js": "^3.2.1",
